--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -3,52 +3,43 @@
 {% block bodyattrs %}id="pagednl" data-spy="scroll" data-target=".navbar" data-offset="50" class="bg-1"{% endblock %}
 {% block bodycontent %}
 <div id="homeSlide" class="carousel slide" data-ride="carousel">
-<!-- Indicators -->
-<ol class="carousel-indicators">
-  <li data-target="#homeSlide" data-slide-to="0" class="active"></li>
-  <li data-target="#homeSlide" data-slide-to="1"></li>
-  <li data-target="#homeSlide" data-slide-to="2"></li>
-</ol>
-
-<!-- Wrapper for slides -->
-<div class="carousel-inner" role="listbox">
-  <div class="item active">
-    <img src="{% static "imgs/slide/homeslide1.jpg" %}" alt="concert Hanoi">
-    <div class="carousel-caption">
-      <h3>Hanoi</h3>
-      <p>The atmosphere in Ha Noi.</p>
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#homeSlide" data-slide-to="0" class="active"></li>
+      <li data-target="#homeSlide" data-slide-to="1"></li>
+      <li data-target="#homeSlide" data-slide-to="2"></li>
+    </ol>
+    <!-- Wrapper for slides -->
+    {% if carousel %}
+    <div class="carousel-inner" role="listbox">
+      {% for car in carousel %}
+        {% if forloop.first %}
+            <div class="active item">
+        {% else %}
+            <div class="item">
+        {% endif %}
+                <img src="{{ car.img.url }}">
+                <div class="carousel-caption">
+                  <h3>{{ car.short_descr }}</h3>
+                  <p>{{ car.long_descr }}</p>
+                </div>
+            </div>
+      {% endfor %}
     </div>
-  </div>
-
-  <div class="item">
-    <img src="{% static "imgs/slide/homeslide2.jpg" %}" alt="concert Hungaria">
-    <div class="carousel-caption">
-      <h3>Hungary</h3>
-      <p>Thank you, Hungaria - A night i won't forget.</p>
-    </div>
-  </div>
-  <div class="item">
-    <img src="{% static "imgs/slide/homeslide3.jpg" %}" alt="concert Italy">
-    <div class="carousel-caption">
-      <h3>Italy</h3>
-      <p>The best time playing in Italy!</p>
-    </div>
-  </div>
-</div>
-
+    {% endif %}
 <!-- Left and right controls -->
-<a class="left carousel-control" href="#homeSlide" role="button" data-slide="prev">
-  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-  <span class="sr-only">Previous</span>
-</a>
-<a class="right carousel-control" href="#homeSlide" role="button" data-slide="next">
-  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-  <span class="sr-only">Next</span>
-</a>
+    <a class="left carousel-control" href="#homeSlide" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#homeSlide" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
 </div>
 <div id="biolong" class="container text-center">
   <h3>Prof. Dang Ngoc Long</h3>
   <p><em>Vietnamese Concert Guitarist and Composer</em></p>
-  <p>{{ biodnl }}</p>
+  <p>{{ biodnl.biography }}</p>
 </div>
 {% endblock %}
