--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-{% block bodyattrs %}id="contact" class="container"{% endblock %}
+{% block bodyattrs %}id="pagednl" data-spy="scroll" data-target=".navbar" data-offset="50"{% endblock %}
 {% block bodycontent %}
+<div id="contact" class="container">
   <h3 class="text-center">Contact</h3>
   <p class="text-center">I love my fans!</p>
 
@@ -29,4 +30,5 @@
     </div>
   </div>
   <br>
+</div>
 {% endblock %}
