--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavbar"></button>
-      <a class="navbar-brand" href="#pagednl">LogoDNL</a>
+      <a class="navbar-brand" href="{% url 'home' %}">LogoDNL</a>
     </div>
     <div class="collapse navbar-collapse" id="topNavbar">
       <ul class="nav navbar-nav navbar-right">
