--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -5,9 +5,10 @@
 <div id="homeSlide" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-      <li data-target="#homeSlide" data-slide-to="0" class="active"></li>
-      <li data-target="#homeSlide" data-slide-to="1"></li>
-      <li data-target="#homeSlide" data-slide-to="2"></li>
+    {% for car in carousel %}
+        <li data-target="#homeSlide" data-slide-to="{{ forloop.counter }}"
+        {% if forloop.first %}class="active"{% endif %}></li>
+    {% endfor %}
     </ol>
     <!-- Wrapper for slides -->
     {% if carousel %}
