--- a/home/templates/comps.html
+++ b/home/templates/comps.html
@@ -22,39 +22,7 @@
     </div>
 
     {% for comp in comps %}
-     <!-- Modal -->
-     <div class="modal fade" id="buydlg{{ comp.pk }}" role="dialog">
-       <div class="modal-dialog">
-         <!-- Modal content-->
-         <div class="modal-content">
-           <div class="modal-header">
-             <button type="button" class="close" data-dismiss="modal">×</button>
-             <h4><span class="glyphicon glyphicon-lock"></span>{{ comp.name }}</h4>
-             <h4><span class="glyphicon glyphicon-usd"></span>{{ comp.price }}</h4>
-           </div>
-           <div class="modal-body">
-             <form role="form">
-               <div class="form-group">
-                 <label for="usrname"><span class="glyphicon glyphicon-user"></span> Send To</label>
-                 <input type="email" class="form-control" id="email" placeholder="Enter email">
-               </div>
-               <div class="form-group">
-                 <label for="usrname"><span class="glyphicon glyphicon-phone"></span> Phone</label>
-                 <input type="tel" class="form-control" id="phonenb" placeholder="Number">
-               </div>
-                 <button type="submit" class="btn btn-block">Pay
-                   <span class="glyphicon glyphicon-ok"></span>
-                 </button>
-             </form>
-           </div>
-           <div class="modal-footer">
-             <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
-               <span class="glyphicon glyphicon-remove"></span> Cancel
-             </button>
-           </div>
-         </div>
-       </div>
-     </div>
+        {% include "buymodal.html" %}
     {% endfor %}
 
 
