--- a/home/templates/news.html
+++ b/home/templates/news.html
@@ -3,7 +3,7 @@
 {% block bodyattrs %}id="pagednl" data-spy="scroll" data-target=".navbar" data-offset="50"{% endblock %}
 {% block bodycontent %}
 <div id="news" class="container">
-  <h1>News</h1>
+  <h1>News</h1></br>
   {% for nws in news %}
   <div class="media">
     <div class="media-left media-middle">
